Add main eero-to-objc functionality

--- a/lib/Rewrite/Frontend/CMakeLists.txt
+++ b/lib/Rewrite/Frontend/CMakeLists.txt
@@ -3,6 +3,7 @@ add_clang_library(clangRewriteFrontend
   FrontendActions.cpp
   HTMLPrint.cpp
   InclusionRewriter.cpp
+  RewriteEeroToObjC.cpp
   RewriteMacros.cpp
   RewriteModernObjC.cpp
   RewriteObjC.cpp
